--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ jobs:
       install:
         - poetry install -v
       script:
-        - poetry run pylint oauth_token_cache
+        - poetry run pylint audio_slackbot
         - poetry run black --check .
     - stage: test
       python:
@@ -26,5 +26,5 @@ jobs:
       install:
         - poetry install -v
       script:
-        - poetry run pytest --cov=oauth_token_cache --cov-report term-missing test/
+        - poetry run pytest --cov=audio_slackbot --cov-report term-missing test/
         - poetry run codecov
