--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytest = "^5.2"
 pytest-cov = "^2.8"
 black = {version = "^18.3-alpha.0",allows-prereleases = true}
 tox = "^3.14"
+codecov = "^2.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
