--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,37 @@
 language: python
 
-services:
-  - redis-server
-
 stages:
   - lint
   - test
+  - release
+
+python:
+  - "3.6"
+
+before_install:
+  - pip install poetry
+
+install:
+  - poetry install -v
 
 jobs:
   include:
     - stage: lint
-      before_install:
-        - pip install poetry
-      install:
-        - poetry install -v
       script:
-        - poetry run pylint audio_slackbot
-        - poetry run black --check .
+        - make lint
     - stage: test
-      python:
-        - "3.6"
-        - "3.7"
-      before_install:
-        - pip install poetry
-      install:
-        - poetry install -v
       script:
-        - poetry run pytest --cov=audio_slackbot --cov-report term-missing test/
+        - make test
         - poetry run codecov
+    - stage: release
+      script: skip
+      before_deploy:
+        - poetry config http-basic.pypi $PYPI_USERNAME $PYPI_PASSWORD
+        - poetry build -f sdist
+      deploy:
+        provider: script
+        script: poetry publish
+        skip_cleanup: true
+        on:
+          tags: true
+
